Showing table with interviews. Migration to bootstrap 4. Refactor of styling. TODO: fix horizontal scroll on .row

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -6,10 +6,6 @@
     background-color: #f7f7f7;
 }
 
-.full-width{
-    width: 100%;
-}
-
 .menu-link{
     color: black;
     font-size: 20px;
@@ -47,8 +43,22 @@
     z-index: 99;
 }
 
-@media only screen and (min-width: 992px){
+@media only screen and (min-width: 768px){
     .full-height{
         height: 100vh;
     }
+}
+
+.width-75{
+    width: 75%;
+}
+
+@media only screen and (max-width: 355px){
+    .responsive-h1{
+        font-size: 1.8rem;
+    }
+}
+
+td{
+    white-space: nowrap;
 }
